--- a/src/index.css
+++ b/src/index.css
@@ -37,5 +37,22 @@
 /* hover on thing and mark the rest */
 
 .lort:hover .asdf{ 
-    @apply bg-yellow-300
+    @apply bg-yellow-300;
+}
+
+.treatment{
+    position: relative;
+}
+
+.treatment div{
+    background-color: rgba(255, 129, 126, 0.9);
+    transition: all 300ms ease-in-out; 
+    @apply absolute w-full h-full invisible flex items-center justify-center opacity-0 ;
+    @apply text-white text-xl
+}
+
+.treatment:hover .treatmentpic {
+    visibility: visible;
+    opacity: 1;
+    
 }
