--- a/src/index.css
+++ b/src/index.css
@@ -48,7 +48,7 @@
     background-color: rgba(255, 129, 126, 0.9);
     transition: all 300ms ease-in-out; 
     @apply absolute w-full h-full invisible flex items-center justify-center opacity-0 ;
-    @apply text-white text-xl
+    @apply text-white text-xl;
 }
 
 .treatment:hover .treatmentpic {
