--- a/src/index.css
+++ b/src/index.css
@@ -56,3 +56,15 @@
     opacity: 1;
     
 }
+
+
+.procButton{
+    background: #30383b;
+    transition: all 300ms ease-in-out;
+    @apply rounded-full py-2 px-6 text-white transition duration-300 hover:bg-mainPink font-bold mt-4;
+}
+
+.procedure:hover .procButton{
+    background-color: rgba(255, 129, 126, 0.9);
+     
+}
